--- a/src/app/owners/owner-add/owner-add.component.html
+++ b/src/app/owners/owner-add/owner-add.component.html
@@ -1,23 +1,23 @@
 <p>owner-add works!</p>
 <form [formGroup]="ownerForm" (ngSubmit)="save()">
   <label>First Name:
-    <input type="text" formControlName="fistName">
+    <input type="text" formControlName="FirstName">
   </label>
 
   <label>Last Name:
-    <input type="text" formControlName="lastName">
+    <input type="text" formControlName="LastName">
   </label>
 
   <label>Address:
-    <input type="text" formControlName="address">
+    <input type="text" formControlName="Address">
   </label>
 
   <label>Phone Number:
-    <input type="text" formControlName="phoneNumber">
+    <input type="text" formControlName="PhoneNumber">
   </label>
 
   <label>Email:
-    <input type="text" formControlName="email">
+    <input type="text" formControlName="Email">
   </label>
 
   <button type="submit">Save</button>
