--- a/src/app/pets/pet-list/pet-list.component.html
+++ b/src/app/pets/pet-list/pet-list.component.html
@@ -1,8 +1,8 @@
 <ul *ngIf="pets">
   <li *ngFor="let pet of pets">
-  <a routerLink="/pets/{{pet.Id}}">{{pet.Name}} {{pet.PetType}}</a>
-    <button routerLink="/pet-update/{{pet.Id}}">Update</button>
-    <button (click)="delete(pet.Id)">Delete</button>
+  <a routerLink="/pets/{{pet.id}}">{{pet.name}} {{pet.petType}}</a>
+    <button routerLink="/pet-update/{{pet.id}}">Update</button>
+    <button (click)="delete(pet.id)">Delete</button>
   </li>
 </ul>
 <h2 *ngIf="!pets">Loading!</h2>
