--- a/src/app/pets/pet-add/pet-add.component.html
+++ b/src/app/pets/pet-add/pet-add.component.html
@@ -19,7 +19,7 @@
     <input type="text" formControlName="Price">
   </label>
 
-  <button type="submit">Save</button>
+  <button mat-raised-button type="submit">Save</button>
 </form>
 
 <button routerLink="/pets">Back</button>
