--- a/src/app/pets/pet-list/pet-list.component.html
+++ b/src/app/pets/pet-list/pet-list.component.html
@@ -1,9 +1,9 @@
-<ul *ngIf="pets">
+<ul mat-list-icon *ngIf="pets">
   <li *ngFor="let pet of pets">
   <a routerLink="/pets/{{pet.id}}">{{pet.name}} {{pet.petType}}</a>
     <button routerLink="/pet-update/{{pet.id}}">Update</button>
-    <button (click)="delete(pet.id)">Delete</button>
+    <button mat-button (click)="delete(pet.id)">Delete</button>
   </li>
 </ul>
-<h2 *ngIf="!pets">Loading!</h2>
-<button routerLink="/pets-add">Add Pet</button>
+<h2  *ngIf="!pets"><mat-spinner></mat-spinner> </h2>
+<button mat-raised-button routerLink="/pets-add">Add Pet</button>
