--- a/src/app/pets/pet-details/pet-details.component.html
+++ b/src/app/pets/pet-details/pet-details.component.html
@@ -1,11 +1,19 @@
-<h1>Pet details</h1>
+<h1>Pet Details</h1>
+
 <div *ngIf="pet">
-  <h2>{{pet.id}}</h2>
-  <h3>{{pet.Name}} {{pet.PetType}}</h3>
-  <h4>{{pet.Price}}</h4>
+  <mat-card>
+    <mat-card-content>
+      <p>Id: {{pet.id}}</p>
+      <p>Name: {{pet.name}} </p>
+      <p>Type {{pet.petType}}</p>
+      <p>Price: {{pet.price}}</p>
+      <p>Birth Date:{{pet.birthDate}}</p>
+      <p>Sold Date: {{pet.soldDate}}</p>
+    </mat-card-content>
+  </mat-card>
 </div>
 <div *ngIf="!pet">
   <h2>Pet not found!</h2>
 </div>
-<button routerLink="/pets">Back</button>
+<button style="position: absolute; right: 15px" mat-raised-button color="primary" routerLink="/pets">Back</button>
 
