--- a/src/app/shared/login/login/login.component.html
+++ b/src/app/shared/login/login/login.component.html
@@ -3,17 +3,17 @@
     Username: UserJoe, Password: 1234<br />
     Username: AdminAnn, Password: 1234
   </div>
-  <h2>Login</h2>
+  <h2 style="color: antiquewhite">Login</h2>
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label>Username</label>
-      <input type="text" formControlName="username" class="form-control" required/>
-      <div *ngIf="username.invalid && submitted" class="alert-danger">
+      <label style="color: antiquewhite">Username</label>
+      <input style="color: antiquewhite" type="text" formControlName="username" class="form-control" required/>
+      <div style="color: antiquewhite" *ngIf="username.invalid && submitted" class="alert-danger">
         <div *ngIf="username.errors.required">Username is required</div>
       </div>
     </div>
     <div class="form-group">
-      <label>Password</label>
+      <label style="color: antiquewhite">Password</label>
       <input type="password" formControlName="password" class="form-control" required/>
       <div *ngIf="password.invalid && submitted" class="alert-danger">
         <div *ngIf="password.errors.required">Username is required</div>
